--- a/BusinessRuleGenerator-THO6/WebContent/WEB-INF/web.xml
+++ b/BusinessRuleGenerator-THO6/WebContent/WEB-INF/web.xml
@@ -8,6 +8,16 @@
       <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>resource</param-value>
     </init-param>
+    <init-param>
+	    <param-name>org.glassfish.jersey.container.ContainerResponseFilters</param-name>
+		<param-value>resource.CorsResponseFilter</param-value>
+	</init-param>
+<!--
+	<init-param>
+		<param-name>jersey.config.server.provider.packages</param-name>
+		<param-value>com.myapplication.filter</param-value>
+	</init-param>
+ -->
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
