--- a/BusinessRuleGenerator-THO6/WebContent/WEB-INF/web.xml
+++ b/BusinessRuleGenerator-THO6/WebContent/WEB-INF/web.xml
@@ -25,6 +25,6 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
   <listener>
-  	<listener-class>servlet.ServletListener</listener-class>
+  	<listener-class>controller.ServletListener</listener-class>
   </listener>
 </web-app>
